--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.3.0",
+    "eslint-plugin-react": "^7.27.1"
   }
 }
